dashboard/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dashboard
  labels:
    app.kubernetes.io/name: bex-dashboard
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: bex-dashboard
  ports:
    - name: http
      port: 80
      targetPort: http
